tests/baselines/reference/jsxGenericTest4.errors.txt
tests/cases/conformance/jsxGeneric/file.tsx(15,13): error TS2322: Type '{ class: string; pipo: string; }' is not assignable to type 'HTMLAttributes'.
  Property 'pipo' does not exist on type 'HTMLAttributes'.


==== tests/cases/conformance/jsxGeneric/file.tsx (1 errors) ====
    /* @jsx-mode generic */
    /* @jsx-intrinsic-factory createElement */
    
    interface HTMLAttributes {
        class?:     string;
        id?:        string;
        onclick?:   (this: HTMLElement, ev: MouseEvent) => void;
    }
     
    function createElement(tagName:"div"|"span", attrs?: HTMLAttributes, ...children:HTMLElement[]): HTMLElement {
        return document.createElement(tagName);
    }
    
    function test() {
        return <div class="test" pipo="1">
                ~~~
!!! error TS2322: Type '{ class: string; pipo: string; }' is not assignable to type 'HTMLAttributes'.
!!! error TS2322:   Property 'pipo' does not exist on type 'HTMLAttributes'.
                    <span/>
               </div>;
    }